# orchestrator-cc

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  ruff.toml  start-dashboard.sh  test_results.txt  test_stability_results.txt
.claude/: settings.json
.claude/skills/: pr-review.md  skills.json
.template/: .gitignore.template  CLAUDE.md.template  Makefile.template  README.md  USAGE.md  pyproject.toml.template  ruff.toml.template
PullRequests/: issue-43-review.md
agents/: __init__.py  specialist_code.py  specialist_research.py  specialist_test.py  team_lead.py
config/: cc-cluster.yaml
config/personalities/: coding_writing_specialist.txt  grand_boss.txt  middle_manager.txt  research_analysis_specialist.txt  testing_specialist.txt
config/teams/: default-team.yaml  small-team.yaml
docs/: 010-issue-43-cluster-startup-fixes.md  010-pr36-improvements.md  011-phase2-minimum.md  architecture.md  overview.md  pane-io-design.md  refactoring-plan.md  references.md  requirements.md  risks.md  roadmap.md  technical-decisions.md  validation.md  web-dashboard.md
docs/analysis/: agent-teams-comparison.md  phase2-fixes-plan.md  phase2-issues-analysis.md
docs/api/: web-api.md
docs/archive/: pane-io-design.md
docs/design/: agent-teams-monitoring-design.md
docs/documentation/: documentation-update-process.md
docs/guidelines/: agent-conversation-prompt.md
docs/issues/: README.md  issue-043-cluster-startup-fixes.md  issue-044-dashboard-cluster-controls.md  issue-045-rust-migration-feasibility.md  issue-046-startup-timeout-fix.md  issue-047-agent-ready-check.md  issue-048-prompt-timeout-reduction.md  issue-049-parallel-startup.md
docs/operations/: README.md  backup-recovery.md  configuration.md  deployment.md  monitoring.md  runbook.md  security.md  troubleshooting.md
docs/quality/: quality-management.md
docs/specs/: agent-behavior.md  api.md  communication.md  directory-structure.md  personality.md  thinking-log.md  yaml-communication.md
docs/testing/: integration-test-guide.md  manual-test-procedures.md
docs/workflows/: development-process.md  post-merge-workflow.md  review-process.md
orchestrator/agents/: __init__.py  cc_agent_base.py  grand_boss.py  middle_manager.py  specialists.py
orchestrator/cli/: __main__.py  main.py
orchestrator/core/: __init__.py  agent_health_monitor.py  agent_teams_manager.py  cc_cluster_manager.py  cc_process_launcher.py  cc_process_models.py  cluster_logger.py  cluster_monitor.py  dashboard_manager.py  exceptions.py  message_logger.py  message_models.py  notification_service.py  pane_io.py  task_tracker.py  tmux_session_manager.py  yaml_monitor.py  yaml_protocol.py
orchestrator/scripts/: verify-agents.sh
orchestrator/web/: .eslintrc.json  .stylelintrc.json  __init__.py  channel_client.py  dashboard.py  message_formatter.py  message_handler.py  spa.py  (+9 more)
queue/: coding_to_middle_manager.yaml  grand_boss_to_middle_manager.yaml  middle_manager_to_coding.yaml  middle_manager_to_grand_boss.yaml  middle_manager_to_research.yaml  middle_manager_to_specialist_coding_writing.yaml  middle_manager_to_specialist_research_analysis.yaml  middle_manager_to_specialist_testing.yaml  middle_manager_to_testing.yaml  research_to_middle_manager.yaml  specialist_coding_writing_to_middle_manager.yaml  specialist_research_analysis_to_middle_manager.yaml  specialist_testing_to_middle_manager.yaml  testing_to_middle_manager.yaml
reviews/: pr-0001-review.md  pr-0013-review-v2.md  pr-0013-review.md  pr-0014-review.md  pr-0019-review.md  pr-021-review.md  pr-10-review.md  pr-12-review.md  pr-16-review.md  pr-17-review.md  pr-18-review.md  pr-28-review-v2.md  pr-28-review.md  pr-29-review.md  pr-31-review.md  pr-32-review.md  pr-33-review.md  pr-34-review-v2.md  pr-34-review.md  pr-35-review.md  pr-36-review.md  pr-7-review.md  pr-8-review.md  pr-9-review.md
scripts/: manual-stability-test.sh  start-dashboard.sh  test-e2e-phase2.sh  test-stability.sh
status/: dashboard.md
tests/: conftest.py  team_utils.py  test_agents.py
(+178 files in other folders)
